--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -1,3 +1,6 @@
+body {
+  font-weight: normal !important;
+}
 
 .wordwrap { 
   white-space: pre-wrap;         
@@ -5,6 +8,10 @@
   white-space: -pre-wrap;    
   white-space: -o-pre-wrap;      
   word-wrap: break-word;    
+}
+
+.lead {
+  font-size: 16px;
 }
 
 .form-control-feedback {
@@ -67,9 +74,9 @@
 }
 
 #searchform {
-  margin-top: 30px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 #searchRes {
@@ -99,6 +106,8 @@
 #page-wrapper {
   width: 950px !important;
   min-width: 950px !important;
+  min-height:800px !important;
+  margin-top: 30px !important;
 }
 
 #page-wrap {
@@ -109,6 +118,8 @@
   padding-left: 50px;
   padding-right: 50px;
   padding-top:20px;
+  margin-top: 30px !important;
+  min-height:800px !important;
 }
 
 .fade {
@@ -297,7 +308,7 @@ padding: 2px 7px;
 .container2{
   background:red !important;
   color:red !important;
-  opacity:0.5
+  opacity:0.5;
 }
 code {
   position: absolute;
@@ -367,4 +378,12 @@ span._code_string {
    modal element will be visible */
 .loading .spinner {
   display: block;
+}
+
+.modal-dialog {
+  width:780px;
+}
+
+.sidebar-nav {
+  margin-top: 20px !important;
 }
