--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -1,112 +1,49 @@
-{% extends "layoutIndex.html" %}
+{% extends "layout.html" %}
 {% block content %}
-
-<!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-    <div class="container topnav">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <!-- <a class="navbar-brand topnav" href="#">PITDB</a> -->
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#about">About</a></li>
-                <li><a href="/search">Search</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
 <a name="about"></a>
 <div class="intro-header">
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="intro-message">
-                    <h1>PIT-DB</h1>
-                    <h3>A Resource for Sharing, Annotating and Analysing Translated Genomic Elements</h3>
-                    <hr class="intro-divider">
-                </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="intro-message">
+          <h1>PIT-DB</h1>
+          <h3>A Resource for Sharing, Annotating and Analysing Translated Genomic Elements</h3>
+          <hr class="intro-divider">
         </div>
+      </div>
     </div>
+  </div>
 </div>
 
 <a  name="services"></a>
 <div class="content-section-a">
-    <div class="container" id="about">
-        <div class="row">
-            <div>
-                <h2 class="section-heading">About PIT-DB</h2>
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <p class="lead">PIT-DB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [1] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [2] to determine whether they are known proteins, protein variants or novel gene products. </p>
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-            </div>
-            <div>
-                <h2 class="section-heading">Acknowledgements</h2>
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <p class="lead">Developed by Elena Chatzimichali and Shyamasree Saha under the supervision of Conrad Bessant (Queen Mary University of London) and David Matthews (University of Bristol). Funded by BBSRC (grants BB/M020118/1 and BB/K016075/1) and Queen Mary University of London.
-                <ol>
-                <li>
-                Evans, V.C., et al., De novo derivation of proteomes from transcriptomes for transcript and protein identification. Nature Methods, 2012. 9(12): p. 1207-U111.</li>
-                <li>Fan, J., et al., Galaxy Integrated Omics: Web-based Standards-Compliant Workflows for Proteomics Informed by Transcriptomics. Mol Cell Proteomics, 2015. 14(11): p. 3087-93.</li>
-                </ol>
-                </p>
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-            </div>
-           <!--  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                <img class="img-responsive" src="img/ipad.png" alt="">
-            </div> -->
-        </div>
-
+  <div class="container" id="about">
+    <div class="row">
+      <div>
+        <h2 class="section-heading">About PIT-DB</h2>
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <p class="lead">PIT-DB is a publicly available database for sharing of results from PIT (proteomics informed by transcriptomics) experiments. PIT [<a href="#ref1">1</a>] involves the analysis of a given sample by both RNA-seq and proteomic mass spectrometry followed by integration of the acquired data to provide an unprecedented level of information about which genomic elements are being transcribed and translated within a given sample, even if the organism under study does not have an annotated genome. Observed translated genomic elements (TGEs) are BLASTed against reference proteomes using a published workflow [<a href="#ref2">2</a>] to determine whether they are known proteins, protein variants or novel gene products. </p>
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+      </div>
+      <div>
+        <h2 class="section-heading">Acknowledgements</h2>
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+        <p class="lead">Developed by Elena Chatzimichali and Shyamasree Saha under the supervision of Conrad Bessant (Queen Mary University of London) and David Matthews (University of Bristol). Funded by BBSRC (grants BB/M020118/1 and BB/K016075/1) and Queen Mary University of London.
+        <ol style="line-height: 1.7em">
+        <li id="ref1">Evans, V.C., et al., De novo derivation of proteomes from transcriptomes for transcript and protein identification. Nature Methods, 2012. 9(12): p. 1207-U111.</li>
+        <li id="ref2">Fan, J., et al., Galaxy Integrated Omics: Web-based Standards-Compliant Workflows for Proteomics Informed by Transcriptomics. Mol Cell Proteomics, 2015. 14(11): p. 3087-93.</li>
+        </ol>
+        </p>
+        <hr class="section-heading-spacer">
+        <div class="clearfix"></div>
+      </div>
     </div>
+  </div>
 </div>
-<!-- 
-<div class="content-section-b">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                <hr class="section-heading-spacer">
-                <div class="clearfix"></div>
-                <h2 class="section-heading">BLAH BLAH BLAH </h2>
-                <p class="lead">Lorem ipsum dolor sit amet, eam labitur accusam te. In expetendis eloquentiam mea. Per natum adhuc expetendis ad. Ad essent putant per. Ullum epicuri detracto his ne. An usu prima philosophia, virtute platonem duo ad.</p>
-            </div>
-            <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                <img class="img-responsive" src="img/dog.png" alt="">
-            </div>
-        </div>
-    </div>
-</div> -->
 
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12" align="center">
-                <ul class="list-inline">
-                    <li><a href="/">Home</a></li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#about">About</a></li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#services">Services</a></li>
-                    <li class="footer-menu-divider">&sdot;</li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
-            </div>
-        </div>
-    </div>
-</footer>
 
 {% endblock %}
