--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -1,93 +1,95 @@
-{% extends "layoutPlots.html" %}
+{% extends "layout.html" %}
 {% block content %}
   
-<div class="navbar-default sidebar" role="navigation">
-  <div class="sidebar-nav navbar-collapse">
-    <ul class="nav" id="side-menu">
-      <li><h5>Navigation Panel</h5></li>
-      <li><a href="#orgSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
-      <li><a href="#orgGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-      <li><a href="#orgBreakdown"><i class="fa fa-bars fa-fw"></i> Organism breakdown</a></li>
-    </ul>
-  </div>
-</div>
-
-<div id="page-wrapper">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Organism: {{ summary.organism }}</h1>
+<div class="container">
+  <div class="navbar-default sidebar" role="navigation">
+    <div class="sidebar-nav navbar-collapse">
+      <ul class="nav" id="side-menu">
+        <li><h5>Navigation Panel</h5></li>
+        <li><a href="#orgSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
+        <li><a href="#orgGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
+        <li><a href="#orgBreakdown"><i class="fa fa-bars fa-fw"></i> TGEs</a></li>
+      </ul>
     </div>
   </div>
 
-  <div class="row">
-  	<div id="orgSummary" class="panel panel-default" style="position: relative !important;">
-      <div class="panel-heading">
-        <i class="fa fa-bar-chart-o fa-fw"></i> Summary
-      </div>
-      
-      <div class="panel-body">
-        <div class="row" style="margin-left:5px">
-        <h5>Number of instances for:</h5>
-          <label>TGEs:</label> {{ summary.tgeNum }}  </br>
-          <label>Samples:</label> {{ summary.sampleNum }} </br>
-          <label>Experiments:</label> {{ summary.expNum }}</br>
-          <label>Transcripts:</label> {{ summary.trnNum }} <br/>
-          <label>Peptides: </label> {{ summary.pepNum }}
-      	</div>
+  <div id="page-wrapper">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">Organism: {{ summary.organism }}</h1>
       </div>
     </div>
 
-    <div id="orgGraph" class="panel panel-default sunburst" style="position: relative !important;">
-      <div class="panel-heading">
-        <i class="fa fa-pie-chart fa-fw"></i> Graph
-      </div>
-
-      <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of organism breakdown</h5></p></span>
-      <div class="col-md-8 col-md-offset-2">
-        <div id="sequence"></div>
-        <div id="chart">
-          <div id="explanation">
-            <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
-          </div>
-        </div>
-      </div>
-      <div style="clear: both;"></div>
-    </div>
-
-    <div>
-    	<div class="panel panel-default" id="orgBreakdown">
+    <div class="row">
+    	<div id="orgSummary" class="panel panel-default" style="position: relative !important;">
         <div class="panel-heading">
-          <i class="fa fa-bars fa-fw"></i> Organism breakdown
+          <i class="fa fa-bar-chart-o fa-fw"></i> Summary
         </div>
         
         <div class="panel-body">
-           <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#tgeModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
-          <br/><br/>
-          <table class="table table-striped table-bordered dataTable no-footer" id = "orgTable">
-          <thead>
-            <tr>
-              <th>TGE Accession</th>
-              <th>TGE Type(s)</th>
-              <th>Uniprot ID(s)</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for tge in tgeList %}
+          <div class="row" style="margin-left:5px">
+          <h5>Number of instances for:</h5>
+            <label>TGEs:</label> {{ summary.tgeNum }}  </br>
+            <label>Samples:</label> {{ summary.sampleNum }} </br>
+            <label>Experiments:</label> {{ summary.expNum }}</br>
+            <label>Transcripts:</label> {{ summary.trnNum }} <br/>
+            <label>Peptides: </label> {{ summary.pepNum }}
+        	</div>
+        </div>
+      </div>
+
+      <div id="orgGraph" class="panel panel-default sunburst" style="position: relative !important;">
+        <div class="panel-heading">
+          <i class="fa fa-pie-chart fa-fw"></i> Graph
+        </div>
+
+        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of organism breakdown</h5></p></span>
+        <div class="col-md-8 col-md-offset-2">
+          <div id="sequence"></div>
+          <div id="chart">
+            <div id="explanation">
+              <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+            </div>
+          </div>
+        </div>
+        <div style="clear: both;"></div>
+      </div>
+
+      <div>
+      	<div class="panel panel-default" id="orgBreakdown">
+          <div class="panel-heading">
+            <i class="fa fa-bars fa-fw"></i> TGEs
+          </div>
+          
+          <div class="panel-body">
+             <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#tgeModal"><i class="fa fa-download"></i>&nbsp;Download TGEs</button>
+            <br/><br/>
+            <table class="table table-striped table-bordered dataTable no-footer" id = "orgTable">
+            <thead>
               <tr>
-                <td>
-                <a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a>
-                </td>
-                <td>{{ tge.tgeClasses }}</td>
-                <td>
-                {% set uniprotIDs = tge.uniprotIDs.split(',') %}
-                {% for uniprotID in uniprotIDs %}
-                  <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
-                {% endfor %}
-                </td>
+                <th>TGE Accession</th>
+                <th>TGE Type(s)</th>
+                <th>Uniprot ID(s)</th>
               </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+            </thead>
+            <tbody>
+              {% for tge in tgeList %}
+                <tr>
+                  <td>
+                  <a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a>
+                  </td>
+                  <td>{{ tge.tgeClasses }}</td>
+                  <td>
+                  {% set uniprotIDs = tge.uniprotIDs.split(',') %}
+                  {% for uniprotID in uniprotIDs %}
+                    <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
+                  {% endfor %}
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
