--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -1,124 +1,124 @@
-{% extends "layoutPlots.html" %}
+{% extends "layout.html" %}
 {% block content %}
-  
-<div class="navbar-default sidebar" role="navigation">
-  <div class="sidebar-nav navbar-collapse">
-    <ul class="nav" id="side-menu">
-      <li><h5>Navigation Panel</h5></li>
-      <li><a href="#tgeSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
-      <li><a href="#tgeGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-      <li><a href="#tgeBreakdown"><i class="fa fa-bars fa-fw"></i> TGE breakdown</a></li>
 
-      <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a></li>
-      <li><a href="#"><i class="fa fa-edit fa-fw"></i> PSM</a></li>
-      <li><a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a></li>
-    </ul>
-    </div>
-  </div>
+<div class="container">
+  <div class="navbar-default sidebar" role="navigation">
+    <div class="sidebar-nav navbar-collapse">
+      <ul class="nav" id="side-menu">
+        <li><h5>Navigation Panel</h5></li>
+        <li><a href="#tgeSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
+        <li><a href="#tgeGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
+        <li><a href="#tgeBreakdown"><i class="fa fa-bars fa-fw"></i> TGE breakdown</a></li>
 
-  <div id="page-wrapper">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">{{ summary.tge.accession }}</h1>
+        <!-- <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a></li>
+        <li><a href="#"><i class="fa fa-edit fa-fw"></i> PSM</a></li>
+        <li><a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a></li> -->
+      </ul>
       </div>
     </div>
 
-    <div class="row">
-      <div>
-        <div class="panel panel-default" id="tgeSummary">
-          <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary</div>
+    <div id="page-wrapper">
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">{{ summary.tge.accession }}</h1>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <div class="panel panel-default" id="tgeSummary">
+            <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary</div>
+            
+            <div class="panel-body">
+              <div class="row" style="margin-left:5px">
+                <label>TGE ID:</label> {{ summary.tge.id }}</br>
+                <label>TGE Type(s):</label> {{ summary.tgeClasses|join(', ') }}</br>
+                <label>Uniprot ID(s):</label>
+                {% for uniprotID in summary.uniprotIDs %}
+                  <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                <label>Organism(s):</label> 
+                {% for org in summary.organisms %}
+                  <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>{% if not loop.last %},{% endif %}
+                {% endfor %}</br>
+                <label>Number of observations:</label> {{ summary.obsCount }}</br>
+              </div>
+          </div>
+        </div>
+
+        <div id="tgeGraph" class="panel panel-default sunburst" style="position: relative !important;">
+          <div class="panel-heading">
+            <i class="fa fa-pie-chart fa-fw"></i> Graph
+          </div>
+          
+          <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
+          <div class="col-md-8 col-md-offset-2">
+            <div id="sequence"></div>
+            <div id="chart">
+              <div id="explanation">
+                <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+              </div>
+            </div>
+          </div>
+          <div style="clear: both;"></div>
+        </div>
+
+        <div class="panel panel-default" id="tgeBreakdown">
+          <div class="panel-heading">
+            <i class="fa fa-bar-chart-o fa-fw"></i> TGE Breakdown
+          </div>
           
           <div class="panel-body">
-            <div class="row" style="margin-left:5px">
-              <label>TGE ID:</label> {{ summary.tge.id }}</br>
-              <label>TGE Type(s):</label> {{ summary.tgeClasses|join(', ') }}</br>
-              <label>Uniprot ID(s):</label>
-              {% for uniprotID in summary.uniprotIDs %}
-                <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %},{% endif %}
-              {% endfor %}</br>
-              <label>Organism(s):</label> 
-              {% for org in summary.organisms %}
-                <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>{% if not loop.last %},{% endif %}
-              {% endfor %}</br>
-              <label>Number of observations:</label> {{ summary.obsCount }}</br>
-            </div>
-        </div>
-      </div>
-
-      <div id="tgeGraph" class="panel panel-default sunburst" style="position: relative !important;">
-        <div class="panel-heading">
-          <i class="fa fa-pie-chart fa-fw"></i> Graph
-        </div>
-        
-        <span><p><h5 style="margin-left: 15px; padding-top: 10px">Graph of TGE breakdown</h5></p></span>
-        <div class="col-md-8 col-md-offset-2">
-          <div id="sequence"></div>
-          <div id="chart">
-            <div id="explanation">
-              <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
-            </div>
-          </div>
-        </div>
-        <div style="clear: both;"></div>
-      </div>
-
-      <div class="panel panel-default" id="tgeBreakdown">
-        <div class="panel-heading">
-          <i class="fa fa-bar-chart-o fa-fw"></i> TGE Breakdown
-        </div>
-        
-        <div class="panel-body">
-          <label>TGE Sequence:</label>
-          <div class="wordwrap test"><span>{{ summary.tge.amino_seq }}</span></div><br/><br/>
-            <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
-            <thead>
-              <tr>
-                <th></th>
-                <th>Observation</th>
-                <th>Uniprot&nbsp;ID</th>
-                <th>Organism</th>
-                <th>Type&nbsp;/&nbsp;Strand</th>
-                <th>Identified Peptides</th>
-                <th>Sample</th>
-                <th>Experiment</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for res in results %}
+            <label>TGE Sequence:</label>
+            <div class="wordwrap test"><span>{{ summary.tge.amino_seq }}</span></div><br/><br/>
+              <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
+              <thead>
                 <tr>
-                  <td>{{ res.peptide_num }}</td>
-                  <td><a href="transcript?obsID={{ res.id }}" target="_blank">{{ res.observation }}</a></td>
-                  <td><a href="protein?uniprot={{ res.uniprotID }}" target="_blank">{{ res.uniprotID }}</a></td>                  
-                  <td class="wordwrap"><a href="organism?organism={{ res.organism }}" target="_blank">{{ res.organism }}</a></td>
-                  <td >{{ res.type }}&nbsp;({{ res.strand }})</td>
-                  <td class="wordwrap" style="font-size: 12px; line-height: 18px;"><strong style="font-size: 14px;">Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}{% if not loop.last %}, {% endif %}<br/>{% endfor %}</td>
-                  <td class="wordwrap">{{ res.sampleName }}</td>
-                  <td><a href="experiment?experiment={{ res.expID }}" target="_blank">{{ res.expTitle }}</a></td>
+                  <th></th>
+                  <th>Observation</th>
+                  <th>Uniprot&nbsp;ID</th>
+                  <th>Organism</th>
+                  <th>Type&nbsp;/&nbsp;Strand</th>
+                  <th>Identified Peptides</th>
+                  <th>Sample</th>
+                  <th>Experiment</th>
                 </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-
-
-      <div class="panel panel-default" id="massspec_stats">
-        <div class="panel-heading ">
-          <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
-        </div>
-          
-        <div class="panel-body collapse in">
-          <div class="row" style="margin-left:5px">
-            <label>Average peptide coverage:</label> {{ summary.avgPeptCov }} </br>
-            <label>Average peptides per TGE:</label> {{ summary.avgPeptNum }}</br>
-            <!-- <label>Average PSM count per peptide:</label>  </br> -->
-            <!-- <label>Score:</label>  </br> -->
-            <label>Software:</label> MSGF+</br>
+              </thead>
+              <tbody>
+                {% for res in results %}
+                  <tr>
+                    <td>{{ res.peptide_num }}</td>
+                    <td><a href="transcript?obsID={{ res.id }}" target="_blank">{{ res.observation }}</a></td>
+                    <td><a href="protein?uniprot={{ res.uniprotID }}" target="_blank">{{ res.uniprotID }}</a></td>                  
+                    <td class="wordwrap"><a href="organism?organism={{ res.organism }}" target="_blank">{{ res.organism }}</a></td>
+                    <td >{{ res.type }}&nbsp;({{ res.strand }})</td>
+                    <td class="wordwrap" style="font-size: 12px; line-height: 18px;"><strong style="font-size: 14px;">Total: {{ res.peptide_num }}</strong><br/>{% for pep in res.peptides %}{{ pep }}{% if not loop.last %}, {% endif %}<br/>{% endfor %}</td>
+                    <td class="wordwrap">{{ res.sampleName }}</td>
+                    <td><a href="experiment?experiment={{ res.expID }}" target="_blank">{{ res.expTitle }}</a></td>
+                  </tr>
+                {% endfor %}
+              </tbody>
+            </table>
           </div>
         </div>
-      </div>    
+
+        <div class="panel panel-default" id="massspec_stats">
+          <div class="panel-heading ">
+            <i class="fa fa-bar-chart-o fa-fw"></i> Mass-Spectrometry Data Statistics
+          </div>
+            
+          <div class="panel-body collapse in">
+            <div class="row" style="margin-left:5px">
+              <label>Average peptide coverage:</label> {{ summary.avgPeptCov }} </br>
+              <label>Average peptides per TGE:</label> {{ summary.avgPeptNum }}</br>
+              <!-- <label>Average PSM count per peptide:</label>  </br> -->
+              <!-- <label>Score:</label>  </br> -->
+              <label>Software:</label> MSGF+</br>
+            </div>
+          </div>
+        </div>    
+      </div>
     </div>
   </div>
-</div>
-
+</div> 
 {% endblock %}
