--- a/pit_app/templates/search/results.html
+++ b/pit_app/templates/search/results.html
@@ -1,60 +1,60 @@
-{% extends "layoutPlots.html" %}
-
+{% extends "layout.html" %}
 {% block content %}
 
-<div id="page-wrap">
-  <input type="hidden" id="searchData" value={{ searchData }}>
-  <input type="hidden" id="searchType" value={{ searchType }}>
-  <span><p><h4>Graph of TGE breakdown</h4></p></span>
-  <div class="col-md-8 col-md-offset-3" style="min-height: 200px">
-    <div id="sequence"></div>
-    <div id="chart">
-      <div id="explanation">
-        <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+<div class="container">
+  <div id="page-wrap">
+    <input type="hidden" id="searchData" value={{ searchData }}>
+    <input type="hidden" id="searchType" value={{ searchType }}>
+    <span><p><h4>Graph of TGE breakdown</h4></p></span>
+    <div class="col-md-8 col-md-offset-3" style="min-height: 200px">
+      <div id="sequence"></div>
+      <div id="chart">
+        <div id="explanation">
+          <span id="percentage"><i class="fa fa-spinner fa-spin fa-3x fa-fw"></i><span class="sr-only">Loading...</span></span>
+        </div>
       </div>
     </div>
-  </div>
-  <div style="clear: both;"></div>
-  <div>
-    <p><h4>List of TGEs:</h4></p><br/>
+    <div style="clear: both;"></div>
+    <div>
+      <p><h4>List of TGEs:</h4></p><br/>
 
-    <table class="table table-striped table-bordered dataTable no-footer tgeTable" id="tgeSearch">
-      <thead>
-        <tr>
-          <th>Accession Number</th>
-          <th>TGE Type(s)</th>
-          <th>Uniprot ID(s)</th>
-          <th>Organism(s)</th>
-          <th>#Observations</th>
-          <th>#Samples</th>
-          <th>Length</th>
-        </tr>
-      </thead>
-    	<tbody>
-        {% for tge in tgeList %}
-          {% set uniprotIDs = tge.uniprotIDs.split(',') %}
-        	<tr>
-        	  <td><a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a></td>
-            <td>{{ tge.tgeClasses }}</td>
-            <td>
-            {% for uniprotID in uniprotIDs %}
-              <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
-            {% endfor %}
-            </td>
-            <td>
-            {% for org in tge.organisms %}
-              <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>{% if not loop.last %},{% endif %}
-            {% endfor %}
-            </td>
-            <td>{{ tge.obsNum }}</td>
-            <td>{{ tge.sampleNum }}</td>
-            <td>{{ tge.length }}</td>
-        	  <!--td class="wordwrap">{{ tge.amino_seq }}</td>-->
-        	</tr>
-        {% endfor %}
-      </tbody>
-    </table>
+      <table class="table table-striped table-bordered dataTable no-footer tgeTable" id="tgeSearch">
+        <thead>
+          <tr>
+            <th>Accession Number</th>
+            <th>TGE Type(s)</th>
+            <th>Uniprot ID(s)</th>
+            <th>Organism(s)</th>
+            <th>#Observations</th>
+            <th>#Samples</th>
+            <th>Length</th>
+          </tr>
+        </thead>
+      	<tbody>
+          {% for tge in tgeList %}
+            {% set uniprotIDs = tge.uniprotIDs.split(',') %}
+          	<tr>
+          	  <td><a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a></td>
+              <td>{{ tge.tgeClasses }}</td>
+              <td>
+              {% for uniprotID in uniprotIDs %}
+                <a href="protein?uniprot={{ uniprotID }}" target="_blank">{{ uniprotID }}</a>{% if not loop.last %}, {% endif %}
+              {% endfor %}
+              </td>
+              <td>
+              {% for org in tge.organisms %}
+                <a href="organism?organism={{ org }}" target="_blank">{{ org }}</a>{% if not loop.last %},{% endif %}
+              {% endfor %}
+              </td>
+              <td>{{ tge.obsNum }}</td>
+              <td>{{ tge.sampleNum }}</td>
+              <td>{{ tge.length }}</td>
+          	  <!--td class="wordwrap">{{ tge.amino_seq }}</td>-->
+          	</tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
-
 {% endblock %}
