--- a/pit_app/templates/results/organism.html
+++ b/pit_app/templates/results/organism.html
@@ -135,12 +135,14 @@
                   <input id="aminoSeq" type="checkbox" name="check" value="aminoSeq" checked="">
                   <label for="aminoSeq">Amino Acid Sequence</label>
                 </div>
+                <br/>
+                <span class="modalWarning" style="color: #c12e2a; font-weight: bold"></span>
               </fieldset>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-info btn-lg">Submit</button>
+          <button id="submitSearch" type="submit" class="btn btn-info btn-lg">Submit</button>
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
