--- a/pit_app/templates/layoutGenoverse.html
+++ b/pit_app/templates/layoutGenoverse.html
@@ -204,7 +204,7 @@
           }
         }),
         Genoverse.Track.extend({
-          name   : 'ORFs',
+          name   : 'TGEs',
           height : 200,
           //info   : 'Ensembl API genes & transcripts, see <a href="http://beta.rest.ensembl.org/" target="_blank">beta.rest.ensembl.org</a> for more details',
           500000: { // more than 500k
@@ -395,203 +395,203 @@
               })
               }//end of section for 1
        }),//end of track
-        Genoverse.Track.extend({
-          name   : 'Peptide',
-          height : 200,
-          500000 : { // more than 500k
-            labels : false,
-            model  : Genoverse.Track.Model.Gene.extend({
-            url : '/genoverse/pep/'+"{{ genoverse.uniprot }}",
-            dataType : 'text',
-            typeMap : {
-              exon  : 'exon',
-              cds   : 'cds',
-              mrna  : 'mrna',
-              gene  : 'gene',
-              pep   : 'peptide'
-            },
-            parseData: function (text) {
-              alert(text)
-              var colors = ['grey','crimson', 'green', 'blue', 'orange', 'yellow','red'];
-              var fColor = 'red'; //colors[Math.floor(Math.random() * colors.length)];  
-              var sample=0;                                                                           
-              var lines = text.split('\n');
-              var overPeptide;
-              var patternOverlap=/pep\d+_\d+\./i
-              var pattern=/pep\d+\./i
+        // Genoverse.Track.extend({
+        //   name   : 'Peptide',
+        //   height : 200,
+        //   500000 : { // more than 500k
+        //     labels : false,
+        //     model  : Genoverse.Track.Model.Gene.extend({
+        //     url : '/genoverse/pep/'+"{{ genoverse.uniprot }}",
+        //     dataType : 'text',
+        //     typeMap : {
+        //       exon  : 'exon',
+        //       cds   : 'cds',
+        //       mrna  : 'mrna',
+        //       gene  : 'gene',
+        //       pep   : 'peptide'
+        //     },
+        //     parseData: function (text) {
+        //       alert(text)
+        //       var colors = ['grey','crimson', 'green', 'blue', 'orange', 'yellow','red'];
+        //       var fColor = 'red'; //colors[Math.floor(Math.random() * colors.length)];  
+        //       var sample=0;                                                                           
+        //       var lines = text.split('\n');
+        //       var overPeptide;
+        //       var patternOverlap=/pep\d+_\d+\./i
+        //       var pattern=/pep\d+\./i
 
-              for (var i = 0; i < lines.length; i++) {
-                if (!lines[i].length || lines[i].indexOf('#') === 0) {
-                  //this is where I need to check for sample name and change color scheme
-                  if(lines[i].indexOf('gff3')<0){
-                    //fColor = colors[sample%colors.length];
-                    sample=sample+1
-                  }
-                  else{
-                    fColor='blue'
-                  }
-                  continue;
-                }
-                //alert(lines[i])
-                var fields = lines[i].split('\t');
+        //       for (var i = 0; i < lines.length; i++) {
+        //         if (!lines[i].length || lines[i].indexOf('#') === 0) {
+        //           //this is where I need to check for sample name and change color scheme
+        //           if(lines[i].indexOf('gff3')<0){
+        //             //fColor = colors[sample%colors.length];
+        //             sample=sample+1
+        //           }
+        //           else{
+        //             fColor='blue'
+        //           }
+        //           continue;
+        //         }
+        //         //alert(lines[i])
+        //         var fields = lines[i].split('\t');
                    
-                if (fields.length < 5) {
-                  continue;
-                }
+        //         if (fields.length < 5) {
+        //           continue;
+        //         }
               
-                if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')){
-                  var feature = {};
+        //         if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')){
+        //           var feature = {};
       
-                  feature.id     = fields.slice(0, 5).join('|');
-                  feature.start  = parseInt(fields[3], 10);
-                  feature.end    = parseInt(fields[4], 10);
-                  feature.source = fields[1];
-                  feature.type   = fields[2];
-                  feature.score  = fields[5];
-                  feature.strand = fields[6] + '1';
+        //           feature.id     = fields.slice(0, 5).join('|');
+        //           feature.start  = parseInt(fields[3], 10);
+        //           feature.end    = parseInt(fields[4], 10);
+        //           feature.source = fields[1];
+        //           feature.type   = fields[2];
+        //           feature.score  = fields[5];
+        //           feature.strand = fields[6] + '1';
       
-                  if (fields[8]) {
-                    var frame = fields[8].split(';');
+        //           if (fields[8]) {
+        //             var frame = fields[8].split(';');
                     
-                    for (var j = 0; j < frame.length; j++) {
-                      var keyValue = frame[j].split('=');
+        //             for (var j = 0; j < frame.length; j++) {
+        //               var keyValue = frame[j].split('=');
                       
-                      if (  keyValue.length === 2) {
-                        feature[keyValue[0].toLowerCase()] = keyValue[1];
-                      }
-                    }
-                  }
+        //               if (  keyValue.length === 2) {
+        //                 feature[keyValue[0].toLowerCase()] = keyValue[1];
+        //               }
+        //             }
+        //           }
                           
-                  if(feature.type.toLowerCase() === this.typeMap.pep.toLowerCase()){
-                    feature.color=fColor;
-                    if(patternOverlap.test(feature.id)){
-                      //alert("1:"+feature.id)
-                      feature.id=feature.id.replace(/(pep\d+)_\d+/,"$1")
-                      //alert("2: "+feature.id)
-                    }
-                    feature.label=feature.id;
+        //           if(feature.type.toLowerCase() === this.typeMap.pep.toLowerCase()){
+        //             feature.color=fColor;
+        //             if(patternOverlap.test(feature.id)){
+        //               //alert("1:"+feature.id)
+        //               feature.id=feature.id.replace(/(pep\d+)_\d+/,"$1")
+        //               //alert("2: "+feature.id)
+        //             }
+        //             feature.label=feature.id;
 
-                    if (this.featuresById[feature.id]){
-                      this.featuresById[feature.id].end=feature.end;
-                    } else {
-                      //alert(feature.id+" inserting")
-                      this.insertFeature(feature) 
-                    }
-                  }
-                } //end of if
-              }//end of forloop
-            }//end of model
-          }),
-          view   : Genoverse.Track.View.Gene.extend({
-            setFeatureColor : function () {}
-          })
-        },//end of 100k
-        1: { // > 1 base-pair, but less then 100K
-          labels : true,
-          model : Genoverse.Track.Model.Transcript.extend({
-            url : '/genoverse/pep/'+"{{ genoverse.uniprot }}",
-            dataType : 'text',
-            typeMap : {
-              exon  : 'exon',
-              cds   : 'cds',
-              mrna  : 'mrna',
-              gene  : 'gene',
-              pep   : 'peptide'
-            },
-            parseData: function (text) {
-              var colors = ['grey','crimson', 'green', 'blue', 'orange', 'yellow','red'];
-              var fColor = 'red';//colors[Math.floor(Math.random() * colors.length)]; 
-              var sample=0;
-              var lines = text.split('\n');
-              var patternOverlap=/pep\d+_\d+\./i
-              var pattern=/pep\d+\./i
+        //             if (this.featuresById[feature.id]){
+        //               this.featuresById[feature.id].end=feature.end;
+        //             } else {
+        //               //alert(feature.id+" inserting")
+        //               this.insertFeature(feature) 
+        //             }
+        //           }
+        //         } //end of if
+        //       }//end of forloop
+        //     }//end of model
+        //   }),
+        //   view   : Genoverse.Track.View.Gene.extend({
+        //     setFeatureColor : function () {}
+        //   })
+        // },//end of 100k
+        // 1: { // > 1 base-pair, but less then 100K
+        //   labels : true,
+        //   model : Genoverse.Track.Model.Transcript.extend({
+        //     url : '/genoverse/pep/'+"{{ genoverse.uniprot }}",
+        //     dataType : 'text',
+        //     typeMap : {
+        //       exon  : 'exon',
+        //       cds   : 'cds',
+        //       mrna  : 'mrna',
+        //       gene  : 'gene',
+        //       pep   : 'peptide'
+        //     },
+        //     parseData: function (text) {
+        //       var colors = ['grey','crimson', 'green', 'blue', 'orange', 'yellow','red'];
+        //       var fColor = 'red';//colors[Math.floor(Math.random() * colors.length)]; 
+        //       var sample=0;
+        //       var lines = text.split('\n');
+        //       var patternOverlap=/pep\d+_\d+\./i
+        //       var pattern=/pep\d+\./i
 
-              for (var i = 0; i < lines.length; i++) {
-                if (!lines[i].length || lines[i].indexOf('#') === 0) {
-                  //this is where I need to check for sample name and change color scheme
-                  if(lines[i].indexOf('gff3')<0){
-                    //fColor = colors[sample];
-                    sample=sample+1
-                  }
-                  continue;
-                }
-                //alert(lines[i])
-                var fields = lines[i].split('\t');
+        //       for (var i = 0; i < lines.length; i++) {
+        //         if (!lines[i].length || lines[i].indexOf('#') === 0) {
+        //           //this is where I need to check for sample name and change color scheme
+        //           if(lines[i].indexOf('gff3')<0){
+        //             //fColor = colors[sample];
+        //             sample=sample+1
+        //           }
+        //           continue;
+        //         }
+        //         //alert(lines[i])
+        //         var fields = lines[i].split('\t');
                    
-                if (fields.length < 5) {
-                  continue;
-                }
+        //         if (fields.length < 5) {
+        //           continue;
+        //         }
 
-                if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')){
-                    var feature = {};
+        //         if (fields[0] === this.browser.chr || fields[0].toLowerCase() === 'chr' + this.browser.chr || fields[0].match('[^1-9]' + this.browser.chr + '$')){
+        //             var feature = {};
       
-                    feature.id     = fields.slice(0, 5).join('|');
-                    feature.start  = parseInt(fields[3], 10);
-                    feature.end    = parseInt(fields[4], 10);
-                    feature.source = fields[1];
-                    feature.type   = fields[2];
-                    feature.score  = fields[5];
-                    feature.strand = fields[6] + '1';
+        //             feature.id     = fields.slice(0, 5).join('|');
+        //             feature.start  = parseInt(fields[3], 10);
+        //             feature.end    = parseInt(fields[4], 10);
+        //             feature.source = fields[1];
+        //             feature.type   = fields[2];
+        //             feature.score  = fields[5];
+        //             feature.strand = fields[6] + '1';
 
-                    if (fields[8]) {
-                      var frame = fields[8].split(';');
+        //             if (fields[8]) {
+        //               var frame = fields[8].split(';');
                       
-                      for (var j = 0; j < frame.length; j++) {
-                        var keyValue = frame[j].split('=');
+        //               for (var j = 0; j < frame.length; j++) {
+        //                 var keyValue = frame[j].split('=');
                         
-                        if (keyValue.length === 2) {
-                          feature[keyValue[0].toLowerCase()] = keyValue[1];
-                        }
-                      }
-                    }
+        //                 if (keyValue.length === 2) {
+        //                   feature[keyValue[0].toLowerCase()] = keyValue[1];
+        //                 }
+        //               }
+        //             }
 
-                    if(feature.type.toLowerCase() === this.typeMap.pep.toLowerCase()){
-                      feature.color=fColor;
+        //             if(feature.type.toLowerCase() === this.typeMap.pep.toLowerCase()){
+        //               feature.color=fColor;
 
-                      if(patternOverlap.test(feature.id))
-                      {
-                        //alert("1:"+feature.id)
-                        copyFeature=feature
-                        feature.id=feature.id.replace(/(pep\d+)_\d+/,"$1")
-                        //alert("2: "+feature.id)
-                        if (this.featuresById[feature.id]){
-                          this.featuresById[feature.id].exons.push(copyFeature)
-                          this.featuresById[feature.id].cds.push(copyFeature)
-                        }
-                        else{
-                          feature.exons=[]
-                          feature.cds=[]
-                          feature.exons.push(copyFeature)
-                          feature.cds.push(copyFeature)
-                        }
-                      }
-                      feature.label=feature.id;
+        //               if(patternOverlap.test(feature.id))
+        //               {
+        //                 //alert("1:"+feature.id)
+        //                 copyFeature=feature
+        //                 feature.id=feature.id.replace(/(pep\d+)_\d+/,"$1")
+        //                 //alert("2: "+feature.id)
+        //                 if (this.featuresById[feature.id]){
+        //                   this.featuresById[feature.id].exons.push(copyFeature)
+        //                   this.featuresById[feature.id].cds.push(copyFeature)
+        //                 }
+        //                 else{
+        //                   feature.exons=[]
+        //                   feature.cds=[]
+        //                   feature.exons.push(copyFeature)
+        //                   feature.cds.push(copyFeature)
+        //                 }
+        //               }
+        //               feature.label=feature.id;
 
-                      if (!this.featuresById[feature.id]){   
-                        if(pattern.test(feature.id))
-                            {
-                          feature.exons=[feature]
-                          feature.cds=[feature]     
-                        }
-                        this.insertFeature(feature) 
-                      }
-                    }
-                  } //end of if
-                }//end of forloop
-                if(typeof gene !== "undefined" && gene){
-                  //alert("gene features entering");
-                  for(var g=0; g<gene.mrna.length; g++)
-                  {
-                      this.insertFeature(gene.mrna[g]);
-                  }
-                }
-              } //end of function
-            }),//end of model
-            view   : Genoverse.Track.View.Transcript.extend({
-              setFeatureColor : function () {}
-            })
-          }
-        })
+        //               if (!this.featuresById[feature.id]){   
+        //                 if(pattern.test(feature.id))
+        //                     {
+        //                   feature.exons=[feature]
+        //                   feature.cds=[feature]     
+        //                 }
+        //                 this.insertFeature(feature) 
+        //               }
+        //             }
+        //           } //end of if
+        //         }//end of forloop
+        //         if(typeof gene !== "undefined" && gene){
+        //           //alert("gene features entering");
+        //           for(var g=0; g<gene.mrna.length; g++)
+        //           {
+        //               this.insertFeature(gene.mrna[g]);
+        //           }
+        //         }
+        //       } //end of function
+        //     }),//end of model
+        //     view   : Genoverse.Track.View.Transcript.extend({
+        //       setFeatureColor : function () {}
+        //     })
+        //   }
+        // })
       ]
     }
   } else {
