--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -10,8 +10,8 @@
         <li><a href="#tgeGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
         <li><a href="#tgeBreakdown"><i class="fa fa-bars fa-fw"></i> TGE breakdown</a></li>
 
-        <!-- <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a></li>
-        <li><a href="#"><i class="fa fa-edit fa-fw"></i> PSM</a></li>
+        <li><a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Mass-spectrometry Statistics</span></a></li>
+        <!-- <li><a href="#"><i class="fa fa-edit fa-fw"></i> PSM</a></li>
         <li><a href="tables.html"><i class="fa fa-table fa-fw"></i>Expression Data Statistics </a></li> -->
       </ul>
       </div>
