--- a/pit_app/templates/home/index.html
+++ b/pit_app/templates/home/index.html
@@ -30,25 +30,27 @@
         <hr class="section-heading-spacer" style="width: 280px">
         <div class="clearfix"></div>
         As of June 2016, the PIT-DB data consist of:<br/><br/>
-        <div class="giant-number-block col-xs-3">
+        <!-- <div class="giant-number-block col-xs-3">
           <span class="giant-number">{{ expNum }} </span>
           <span class="text-muted">experiments</span>
+        </div> -->
+
+        <div class="giant-number-block col-xs-4">
+          <span class="giant-number">{{ tges }}</span>
+          <span class="text-muted">TGes</span>
         </div>
 
-        <div class="giant-number-block col-xs-3">
+        <div class="giant-number-block col-xs-4">
           <span class="giant-number">{{ smlNum }}</span>
           <span class="text-muted">samples</span>
         </div>
 
-        <div class="giant-number-block col-xs-3">
+        <div class="giant-number-block col-xs-4">
           <span class="giant-number">{{ species }}</span>
           <span class="text-muted">Organisms</span>
         </div>
 
-        <div class="giant-number-block col-xs-3">
-          <span class="giant-number">{{ tges }}</span>
-          <span class="text-muted">TGes</span>
-        </div>
+        
         <!-- <hr class="section-heading-spacer"> -->
         <div class="clearfix"></div>
       </div>
