--- a/pit_app/static/css/pitdb.css
+++ b/pit_app/static/css/pitdb.css
@@ -306,13 +306,6 @@ background: #F9C3C3;
 padding: 2px 7px;
 }
 
-.container2, ._code_string {
-  background:yellow !important;
-  /*color:yellow !important;*/
-  /*opacity:0.7;*/
-  z-index: 50px;
-}
-
 code {
   position: relative;
   left: 0;
@@ -324,7 +317,8 @@ code {
 }
 
 span._code_string {
-  background: #4C5CF9;
+  background: #99ffff;
+  font-weight: bold;
   /*color: #4C5CF9;*/
   color: black;
   padding: 0px 0px;
