--- a/pit_app/templates/results/tge.html
+++ b/pit_app/templates/results/tge.html
@@ -69,8 +69,8 @@
           </div>
           
           <div class="panel-body">
-            <label>TGE Sequence:</label>
-            <div id="tgeSeq" class="wordwrap"><span class="test">{{ summary.tge.amino_seq }}</span></div><br/><br/>
+            <label style="padding-bottom: 8px;">TGE Sequence (experimental peptide coverage highlighted):</label>
+            <div id="tgeSeq" class="wordwrap"><span class="test" style="line-height: 1.7em">{{ summary.tge.amino_seq }}</span></div><br/><br/>
               <table class="table table-striped table-bordered dataTable no-footer clickable" id="tges" >
               <thead>
                 <tr>
