Fixing the home page and size of image

--- a/pit_app/static/css/ext/landing-page.css
+++ b/pit_app/static/css/ext/landing-page.css
@@ -32,8 +32,9 @@ h6 {
 
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
-    padding-bottom: 50px;
+    /*padding-bottom: 50px;*/
     text-align: center;
+    height: 570px;
     color: #f8f8f8;
     background: url(../../img/helix2.jpg) no-repeat center center;
     background-size: cover;
@@ -41,7 +42,7 @@ h6 {
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
+    padding-top: 18%;
     padding-bottom: 20%;
 }
 
